--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BaskeNAv</title>
+    <title>BaskeNav</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <!--ヘッダー部分テンプレート-->
+    <%= render "layouts/header" %>
+    
     <%= yield %>
+    
+    <!--フッター部分テンプレート-->
+    <%= render "layouts/footer" %>
   </body>
 </html>
