--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,18 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="row">
+        <div class="col-mb-6">
+
+        </div>
+        <div class="col-mb-6">
+          <%= @user.name %>
+          <%= link_to "Follow", 
+        </div>
+      </div>
+    </div>
+    <div class="col-md-9">
+
+    </div>
+  </div>
+</div>
