--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
             <li><%= link_to "News", news_path, class: "nav-link text-light" %></li>
             <li><%= link_to "Mypage", user_path(current_user), class: "nav-link text-light" %></li>
               <%= link_to root_url, class: "nav-link text-light" do %>
-                <img src="/assets/logo.jpg">
+                <img src="/assets/logo.png">
               <% end %>
             </li>
             <li><%= link_to "Posts", posts_path, class: "nav-link text-light" %></li>
@@ -24,7 +24,7 @@
             <li><%= link_to "Game", game_path, class: "nav-link text-light" %></li>
             <li><%= link_to "News", news_path, class: "nav-link text-light" %></li>
               <%= link_to root_url, class: "nav-link text-light" do %>
-                <img src="/assets/logo.jpg">
+                <img src="/assets/logo.png">
               <% end %>
             </li>
             <li><%= link_to "Mypage", facility_path(current_user), class: "nav-link text-light" %></li>
@@ -35,7 +35,7 @@
             <li><%= link_to "News", news_path, class: "nav-link text-light" %></li>
             <li>
               <%= link_to root_url, class: "nav-link text-light" do %>
-                <img src="/assets/logo.jpg">
+                <img src="/assets/logo.png">
               <% end %>
             </li>
             <li><%= link_to "Sign-Up", new_user_registration_path, class: "nav-link text-light" %></li>
