--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,12 +1,31 @@
-<% form_with(model: @post, local: true, multipart: true) do |f| %>
-  <div class="spot">
-    <%= f.fields_for :post_place do |s| %>
-      <%= s.label :address, "レビュー場所(Google Mapで検索)", class: 'spot__title' %>
-      <%= s.text_field :address, placeholder: "スポットを入力", id: "address", class: 'spot__text' %>
-    <% end %>
-    <input onclick="codeAddress()", type="button", value="検索する">
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-3">
+      <%= form_with model: @post, local: true do |f| %>
 
-    <div class="map" id="map" style="height: 320px; width: 640px;"></div>
+        <%= f.label :Content %><br>
+        <%= f.text_area :content %>
+
+        <%= f.attachment_field :image %>
+
+        <%= f.fields_for :post_place do |s| %>
+          <%= s.label :address, "レビュー場所(Google Mapで検索)", class: 'spot__title' %>
+          <%= s.text_field :address, placeholder: "スポットを入力", id: "address", class: "spot__text" %>
+        <% end %>
+
+        <input onclick="codeAddress()", type="button", value="検索する">
+
+        <%= f.submit "投稿する" %>
+
+      <% end %>
+    </div>
+    <div class="col-mb-9">
+      <div class="map" id="map", style="height: 320px; width: 640px;"></div>
+    </div>
   </div>
-<% end %>
+</div>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKzm8Q1CsziI929WJM-dQQlwV1L3MpydY&callback=initMap"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script src="//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js", type:"text/javascript"></script>
 
