--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -5,8 +5,18 @@
     <%= render "admins/shared/error_messages", resource: resource %>
 
     <div class="field">
+      <%= f.label :Name %><br />
+      <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+    </div>
+
+    <div class="field">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :PhoneNumber %><br />
+      <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone_number" %>
     </div>
 
     <div class="field">
