--- a/app/views/facilities/show.html.erb
+++ b/app/views/facilities/show.html.erb
@@ -44,9 +44,11 @@
         </div>
       <% end %>
 
+      <% if current_user %>
       <div id = "favorites_btn_<%= @facility.id %>">
         <%= render 'facility_favorites/like', facility: @facility %>
       </div>
+      <% end %>
     </div>
 
   <div class="col-md-8">
@@ -55,7 +57,23 @@
 
 </div>
 
+<div id="calendar" style="width: 80%; margin: 0 auto;"></div>
+
+
 <% if current_user %>
+
+  <div class="new-reserve" >
+    <h2>Reserve</h2>
+    <%= form_with(model: [@facility, @reserve_facility], local: true) do |f| %>
+      <%= f.label :日時 %>
+      <%= f.datetime_field :start %>
+      <%= f.datetime_field :finish %>
+      <%= f.label :人数 %>
+      <%= f.text_field :number %>
+      <%= f.submit "予約する" %>
+    <% end %>
+  </div>
+
   <div class="new-comment">
     <h2>Comments</h2>
     <%= form_with(model: [@facility, @comment], local: true) do |f| %>
