--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,203 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@mixin view($photo) {
+  width: 100%;
+  height: 900px;
+  background-size: cover;
+  background-image: image-url($photo);
+}
+
+
+// TOP画面のレイアウト
+.main-contents{
+  &--main-view{
+    @include view('top.png');
+    margin-top: 10px;
+  }
+  &--news{
+    width: 80%;
+    min-height: 600px;
+    margin: 100px auto;
+    background-size: cover;
+    background-image: image-url('10.jpg');
+    position: relative;
+  }
+  &--text{
+    width: 40%;
+    height: 580px;
+    color: white;
+    background: rgba(255,255,255, 0.6);
+    text-align: center;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
+  &--info{
+    position: relative;
+    text-align: center;
+     &__text1{
+      width: 90%;
+      height: 600px;
+      margin: 20px auto;
+      background-image: image-url('8.jpeg');
+      background-size: cover;
+      position: relative;
+      background-position: top -120px right 0;
+    }
+    &__text2{
+      width: 90%;
+      height: 600px;
+      margin: 20px auto;
+      background-image: image-url('6.jpeg');
+      background-size: cover;
+      background-position: top -120px right 0;
+    }
+    &__photo1{
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 0 0 300px 1255.5px;
+      border-color: transparent transparent white transparent;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+    }
+    &__photo2{
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 300px 1255.5px 0 0;
+      border-color: white transparent white transparent;
+    }
+    h1{
+      font-size: 60px;
+      position: absolute;
+      top: 560px;
+      left: 300px;
+      transform: rotate(-14deg);
+    }
+    h1:after {
+      content: "";
+      display: block;
+      height: 10px;
+      background: linear-gradient(to right, rgb(230, 90, 90), transparent);
+    }
+  }
+}
+
+// Game画面のレイアウト
+.game{
+  &--view{
+    position: relative;
+    background: black;
+    width: 100%;
+    height: 500px;
+    h1, h2{
+      color: white;
+    }
+    &__photo{
+      width: 1200px;
+      height: 500px;
+      background-image: image-url('7.jpg');
+      background-size: cover;
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  }
+  &--conference{
+    position: relative;
+    margin: 30px 0 30px 30px;
+    &__east{
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 100px 0 0 600px;
+      border-color: transparent transparent transparent #007bff;
+      position: relative;
+    }
+    &__west{
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 0 600px 100px 0;
+      border-color: transparent red transparent transparent;
+      position: absolute;
+      top: 0;
+    }
+  }
+  &--link{
+    &__east{
+      position: absolute;
+      top: -70px;
+      left: -580px;
+      font-size: 50px;
+      color: black;
+    }
+    &__west{
+      font-size: 50px;
+      color: black;
+      position: absolute;
+      left: 480px;
+    }
+  }
+  &--years{
+    margin: 0 auto;
+  }
+  &--table {
+    margin: 50px auto;
+    border-collapse: collapse;
+    text-align: center;
+    th, td {
+      padding: 40px;
+      border: 1px solid #333;
+    }
+    th {
+      background-color: #2c88d9;
+      color: #FFF;
+    }
+    &__team{
+      text-align: left;
+    }
+  }
+}
+
+// News画面のレイアウト
+.news{
+  &--main{
+    width: 100%;
+    background: image-url('11.jpeg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 100px 130px;
+    h1{
+      color: white;
+      padding: 20px;
+    }
+  }
+  &--articles{
+    display: flex;
+    flex-wrap: wrap;
+    width: 1000px;
+    margin-right: 100px;
+    &__item{
+      width: 400px;
+      background-color: white;
+      margin: 20px auto;
+      border: 2px solid black;
+    }
+    &__image{
+      margin-left: 10px;
+      margin-top: 10px;
+      img{
+        width: 380px;
+        height: 200px;
+      }
+    }
+  }
+}
+
+
+
