--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,60 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// 会員の情報
+.user-info{
+  width: 450px;
+  padding: 20px;
+  border: 1px solid black;
+  margin: 20px;
+  box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
+  background-color: rgb(224, 153, 0);
+  &--doing{
+    margin-top: 10px;
+  }
+  &--image{
+    img{
+      width: 100px;
+      height: 100px;
+      border: 1px solid black;
+      border-radius: 100px;
+      box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
+    }
+  }
+  &--doing{
+    display: flex;
+  }
+  &--number{
+    padding: 15px;
+    text-align: center;
+    display: flex;
+    p{
+      padding: 10px;
+    }
+  }
+  &--contents{
+    &__introduce{
+      padding-top: 10px;
+    }
+  }
+  &--like{
+    padding-top: 20px;
+    &__contents{
+      display: flex;
+      text-align: center;
+      p{
+        padding-left: 20px;
+      }
+    }
+  }
+}
+
+// 会員詳細画面
+.user-show{
+  display: flex;
+  flex-wrap: wrap;
+  &--posts{
+    margin: 60px 0 0 50px;
+  }
+}
