--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,52 +1,63 @@
-  <div class="row">
-    <div class="col-mb-6">
-      <%= attachment_image_tag(user, :user_image, :fill, 50, 50, fallback: "no_image.jpg") %>
-    </div>
-    <div class="col-mb-6">
-      <%= user.name %><br>
-      <p>Follow</p>
-      <%= link_to user.followings.count, user_followings_path(user) %>
-      <p>Follower</p>
-      <%= link_to user.followers.count, user_followers_path(user) %>
-    </div>
-  </div>
-
-  <div class="row">
-    <p>introduction</p><br>
-    <%= user.introduce %>
-  </div>
-
-  <div>
-    <p>Like</p>
-    <div>
-    <%= link_to user_favorite_posts_path(user) do %>
-      Post<%= user.post_favorites.count %>
-    <% end %>
-    <%= link_to "Facilities", "#" %><br>
-    </div>
-  </div>
-
+<div class="user-info">
   <% if user == current_user %>
-    <div class="row">
+    <div class="user-info--post">
       <%= link_to "投稿する", new_post_path %>
-    </div>
-
-    <div class="row">
+      <i class="fas fa-feather-alt"></i>
       <%= link_to "Edit", edit_user_path(user) %>
+      <i class="fas fa-user-edit"></i>
     </div>
   <% end %>
 
-  <% if user != current_user %>
-    <div class="row">
-      <p>Message</p>
-    </div>
-
-    <div class="row">
+  <div class="user-info--follow">
+    <% if user != current_user %>
       <% if current_user.following?(user) %>
         <%= link_to "Chatを始める", message_path(user) %>
         <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, class:"btn btn-success" %>
       <% else %>
         <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class:"btn btn-success" %>
       <% end %>
+    <% end %>
+  </div>
+
+  <div class="user-info--doing">
+    <div class="user-info--image">
+      <%= attachment_image_tag(user, :user_image, fallback: "no_image.jpg") %>
     </div>
-  <% end %>
+    <div class="user-info--number">
+      <p>
+        <%= user.posts.count %><br>
+        投稿
+      </p>
+      <p>
+        <%= link_to user.followings.count, user_followings_path(user) %><br>
+        フォロー
+      </p>
+      <p>
+        <%= link_to user.followers.count, user_followers_path(user) %><br>
+        フォロワー
+      </p>
+    </div>
+  </div>
+
+  <div class="user-info--contents">
+    <p><%= user.name %></p>
+    <p class="user-info--contents__introduce">
+      introduction<br>
+      <%= user.introduce %>
+    </p>
+  </div>
+
+  <div class="user-info--like">
+    <p>お気に入り</p>
+    <div class="user-info--like__contents">
+      <p>
+        <%= link_to user.post_favorites.count, user_favorite_posts_path(user) %><br>
+        Post
+      </p>
+      <p>
+        <%= link_to user.facility_favorites.count, user_favorite_facilities_path(user) %><br>
+        Facility
+      </p>
+    </div>
+  </div>
+</div>
