--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -19,17 +19,16 @@
     margin: 60px 0 0 70px;
     display: flex;
     flex-wrap: wrap;
+    align-items: baseline;
     position: relative;
     &__view{
+      margin-top: 10px;
       width: 30%;
-      min-height: 300px;
       background-image: image-url('red.png');
       background-size: cover;
-      position: relative;
       &:nth-child(even){
-        margin: 50px 20px;
+        margin: 60px 20px 0 20px;
         width: 30%;
-        min-height: 300px;
         background-image: image-url('blue.png');
         background-size: cover;
       }
@@ -37,18 +36,93 @@
     &__detail{
       padding-top: 30px;
       padding-left: 30px;
+      img{
+        margin-right: 10px;
+        width: 50px;
+        height: 50px;
+        border: 1px solid black;
+        border-radius: 50px;
+        box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
+      }
     }
     &__content{
       padding-top: 30px;
     }
     &__photo{
-      position: absolute;
-      bottom: 40px;
-      left: 30px;
+      margin: 40px 50px 40px 30px;
       img{
         width: 200px;
         height: 120px;
+        box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
       }
     }
+  }
+}
+
+// 詳細ページレイアウト
+.post-show{
+  width: 100%;
+  height: 100vh;
+  background-image: image_url('CorkBoard02.jpeg');
+  background-size: cover;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 40px;
+  &--favorite{
+    padding-top: 10px;
+  }
+  &--contents{
+    width: 500px;
+    margin-right: 50px;
+    background-image: image_url('blue.png');
+    background-size: cover;
+  }
+  &--post{
+    padding: 60px 50px;
+  }
+  &--post-user{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    img{
+      width: 100px;
+      height: 100px;
+      border: 1px solid black;
+      border-radius: 100px;
+      box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
+    }
+    h2{
+      padding: 20px;
+    }
+  }
+  &--content{
+    padding-top: 20px;
+    width: 80%;
+    p{
+      padding-left: 20px;
+    }
+  }
+  &--address{
+    padding-top: 20px;
+    width: 80%;
+    p{
+      padding-left: 20px;
+    }
+  }
+  &--post-image{
+    img{
+      width: 400px;
+      height: 220px;
+      margin-bottom: 20px;
+      border: 1px solid black;
+      box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
+    }
+  }
+  &--map{
+    padding-top: 30px;
+  }
+  &--comments{
+    padding: 30px 0 30px 50px;
+    width: 500px;
   }
 }
