--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,6 +10,13 @@
   margin: 20px;
   box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
   background-color: rgb(224, 153, 0);
+  &--follow{
+    #modan_open{
+      width: 100px;
+      height: 100px;
+      cursor: pointer;
+    }
+  }
   &--doing{
     margin-top: 10px;
   }
@@ -56,5 +63,56 @@
   flex-wrap: wrap;
   &--posts{
     margin: 60px 0 0 50px;
+  }
+}
+
+.chats{
+  &--background{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 101;
+  }
+  &--background.active{
+    opacity: 0.7;
+    visibility: visible;
+  }
+  &--messages{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    height: 550px;
+    transform: translate(-50%, -50%);
+    z-index: 102;
+    background-color: white;
+    border-radius: 10px;
+    opacity: 0;
+    visibility: hidden;
+  }
+  &--messages.active{
+    opacity: 1;
+    visibility: visible;
+  }
+  &--title{
+    width: 100%;
+    padding: 10px;
+    background-color: #00FF66;
+    border-radius: 10px;
+    text-align: center;
+  }
+  &--contents{
+    padding: 20px;
+    height: 400px;
+    overflow: scroll;
+  }
+  &--form{
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
   }
 }
