--- a/app/views/post_comments/_index.html.erb
+++ b/app/views/post_comments/_index.html.erb
@@ -1,18 +1,26 @@
-<% post_comments.each do |post_comment| %>
-  <tr>
-    <td>
-      <%= link_to user_path(post_comment.user) do %>
-        <%= attachment_image_tag(post_comment.user, :user_image, :fill, 100, 100, fallback: "no_image.jpg") %><br>
-        <%= post_comment.user.name %>
-      <% end %>
-    </td>
-    <td>
-      <%= post_comment.comment %>
-    </td>
-    <td>
-    <% if post_comment.user == current_user %>
-      <%= link_to "Destroy", post_post_comment_path(post_comment.post_id, post_comment), method: :delete, class:"btn btn-danger" %>
-    <% end %>
-    </td>
-  </tr>
-<% end %>
+<div class="post-comments">
+  <% post_comments.each do |post_comment| %>
+    <div class="post-comments--view">
+      <div class="post-comments--view__postit-left"></div>
+      <div class="post-comments--view__postit-right">
+        <div class="post-comments--detail">
+          <%= link_to user_path(post_comment.user) do %>
+            <%= attachment_image_tag(post_comment.user, :user_image, fallback: "no_image.jpg") %>
+            <%= post_comment.user.name %>
+          <% end %>
+        </div>
+        <div class="post-comments--post">
+          <div class="post-comments--content">
+            <p><%= post_comment.comment %></p>
+          </div>
+          <div class="post-comments--delete">
+            <% if post_comment.user == current_user %>
+              <%= link_to "Destroy", post_post_comment_path(post_comment.post_id, post_comment), method: :delete, class:"btn btn-danger" %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
+
