--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,21 +1,21 @@
 <div class="posts">
-    <div class="posts--contents">
-      <% posts.each do |post| %>
-        <div class="posts--contents__view">
-          <div class="posts--contents__detail">
-            <%= link_to post_path(post) do %>
-              <%= attachment_image_tag post.user, :user_image, :fill, 50, 50, fallback: "no_image.jpg" %>
-              <%= post.user.name %>
-            <% end %>
-            <div class="posts--contents__content">
-              <%= post.content %>
-            </div>
+  <div class="posts--contents">
+    <% posts.each do |post| %>
+      <div class="posts--contents__view">
+        <div class="posts--contents__detail">
+          <%= link_to post.user do %>
+            <%= attachment_image_tag post.user, :user_image, fallback: "no_image.jpg" %>
+            <%= post.user.name %>
+          <% end %>
+          <div class="posts--contents__content">
+            <%= link_to post.content, post_path(post)  %>
           </div>
-          <div class="posts--contents__photo">
-              <%= attachment_image_tag post, :image, :fill, 100, 100, fallback: "no_image.jpg" %>
-            </div>
         </div>
-      <% end %>
-    </div>
+        <div class="posts--contents__photo">
+          <%= attachment_image_tag post, :image, fallback: "no_image.jpg" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
 
