--- a/app/views/relationships/_follow.html.erb
+++ b/app/views/relationships/_follow.html.erb
@@ -1,11 +1,38 @@
-<% if users.exists? %>
-  <% users.each do |user| %>
-    <%= attachment_image_tag(user, :user_image, :fill, 50, 50, fallback: "no_image.jpg") %></td>
-    <%= user.name %>
-    フォロー数: <%= user.followings.count %>
-    フォロワー数: <%= user.followers.count %>
-    <%= link_to 'Show', user_path(user), class: "user_#{user.id}" %>
+
+  <% if users.exists? %>
+    <table class="relationships--table">
+      <thead>
+        <tr>
+          <th>ユーザー</th>
+          <th>投稿数</th>
+          <th>フォロー</th>
+          <th>フォロワー</th>
+          <th>ユーザー詳細</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% users.each do |user| %>
+          <tr>
+            <td>
+              <%= link_to user_path(user), class: "user_#{user.id}" do %>
+                <%= attachment_image_tag(user, :user_image, :fill, 50, 50, fallback: "no_image.jpg") %>
+                <%= user.name %>
+              <% end %>
+            </td>
+            <td><%= user.posts.count %><br>投稿数</td>
+            <td><%= link_to user.followings.count, user_followings_path(user) %><br>フォロー</td>
+            <td><%= link_to user.followers.count, user_followers_path(user) %><br>フォロワー</td>
+            <td>
+              <% if current_user.following?(user) %>
+                  <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, class:"btn btn-success" %>
+                <% else %>
+                  <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class:"btn btn-success" %>
+                <% end %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  <% else %>
+    <p>ユーザーはいません</p>
   <% end %>
-<% else %>
-  <p>ユーザーはいません</p>
-<% end %>
