--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -3,7 +3,7 @@
     <div class="user-info--post">
       <%= link_to "投稿する", new_post_path %>
       <i class="fas fa-feather-alt"></i>
-      <%= link_to "Edit", edit_user_path(user) %>
+      <%= link_to "Profile edit", edit_user_path(user) %>
       <i class="fas fa-user-edit"></i>
     </div>
   <% end %>
@@ -11,7 +11,7 @@
   <div class="user-info--follow">
     <% if user != current_user %>
       <% if current_user.following?(user) %>
-        <%= link_to "Chatを始める", message_path(user) %>
+        <a id="modan_open">Chatsを始める</a>
         <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, class:"btn btn-success" %>
       <% else %>
         <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class:"btn btn-success" %>
@@ -61,3 +61,33 @@
     </div>
   </div>
 </div>
+
+<% if user != current_user %>
+  <% if current_user.following?(user) %>
+    <div class="chats">
+      <div class="chats--background" id="modan_close"></div>
+      <div class="chats--messages">
+        <div class="chats--title">
+          <h1><%= @user.name %>のチャット</h1>
+        </div>
+        <div class="chats--contents">
+          <% @messages.each do |chat| %>
+            <% if chat.user == current_user %>
+              <p style="text-align: right;"><%= chat.message %><br><%= chat.created_at.strftime("%H:%M:%S") %></p>
+            <% else %>
+              <p style="text-align: left;"><%= chat.message %></p>
+            <% end %>
+          <% end %>
+        </div>
+
+        <div class="chats--form">
+          <%= form_with model: @message, remote: true do |f| %>
+            <%= f.text_field :message %>
+            <%= f.hidden_field :room_id %>
+            <%= f.submit "送信する", id: "submit" %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+<% end %>
