--- a/app/views/post_comments/_index.html.erb
+++ b/app/views/post_comments/_index.html.erb
@@ -1,4 +1,4 @@
-<div class="post-comments">
+<div class="post-comments" id="post_comments">
   <% post_comments.each do |post_comment| %>
     <div class="post-comments--view">
       <div class="post-comments--view__postit-left"></div>
@@ -15,7 +15,7 @@
           </div>
           <div class="post-comments--delete">
             <% if post_comment.user == current_user %>
-              <%= link_to "Destroy", post_post_comment_path(post_comment.post_id, post_comment), method: :delete, class:"btn btn-danger" %>
+              <%= link_to "Destroy", post_post_comment_path(post_comment.post_id, post_comment), method: :delete, remote: true, class:"btn btn-danger" %>
             <% end %>
           </div>
         </div>
