--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,5 @@
-<div class="container mt-5">
-  <div class="row">
-
-    <div class="col-md-9">
-      <%= render "posts/posts", posts: @posts %>
-    </div>
+<div class="Myposts">
+  <div class="Myposts--posts">
+    <%= render "posts/posts", posts: @posts %>
   </div>
 </div>
