--- a/app/views/facilities/index.html.erb
+++ b/app/views/facilities/index.html.erb
@@ -16,3 +16,9 @@
     </div>
   </div>
 </div>
+
+<div class="index_maps" id="index_map" style="height: 650px; width: 500px;"></div>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKzm8Q1CsziI929WJM-dQQlwV1L3MpydY&callback=initMap"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script src="//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js", type:"text/javascript"></script>
