--- a/app/views/post_favorites/index.html.erb
+++ b/app/views/post_favorites/index.html.erb
@@ -1,10 +1,8 @@
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-md-3">
-      <%= render "users/info", user: @user %>
-    </div>
-    <div class="col-md-9">
-      <%= render "posts/posts", posts: @posts %>
-    </div>
+<div class="user-show">
+  <div class="user-show--info">
+    <%= render "users/info", user: @user %>
+  </div>
+  <div class="user-show--posts">
+    <%= render "posts/posts", posts: @posts %>
   </div>
 </div>
