--- a/app/views/relationships/_follow.html.erb
+++ b/app/views/relationships/_follow.html.erb
@@ -1,5 +1,4 @@
 
-  <% if users.exists? %>
     <table class="relationships--table">
       <thead>
         <tr>
@@ -21,18 +20,13 @@
             </td>
             <td><%= user.posts.count %><br>投稿数</td>
             <td><%= link_to user.followings.count, user_followings_path(user) %><br>フォロー</td>
-            <td><%= link_to user.followers.count, user_followers_path(user) %><br>フォロワー</td>
-            <td>
-              <% if current_user.following?(user) %>
-                  <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, class:"btn btn-success" %>
-                <% else %>
-                  <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class:"btn btn-success" %>
-                <% end %>
+            <td id="follower-<%= user.id %>">
+              <%= render "relationships/follower", user: user %>
+            </td>
+            <td id="follow-btn_<%= user.id %>">
+              <%= render "relationships/relationship", user: user %>
             </td>
           </tr>
         <% end %>
       </tbody>
     </table>
-  <% else %>
-    <p>ユーザーはいません</p>
-  <% end %>
