--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,4 +1,5 @@
 <div class="posts">
+  <%= image_tag title, class: "posts--title"%>
   <div class="posts--contents">
     <% posts.each do |post| %>
       <div class="posts--contents__view">
