--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="Myposts">
   <div class="Myposts--posts">
-    <%= render "posts/posts", posts: @posts %>
+    <%= render "posts/posts", posts: @posts, title: "/assets/posts.png" %>
   </div>
 </div>
