--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,7 +47,7 @@ header{
  position: fixed;
  width: 100%;
  top: 0;
- z-index: 100;
+ z-index: 1000;
 }
 
 // ヘッダートップ
@@ -145,11 +145,51 @@ header{
   background-color: white;
   position: fixed;
   bottom: 0;
+  z-index: 1000;
  }
 
  body{
   padding: 110px 0 50px 0;
  }
+
+ a,
+ a:hover{
+  text-decoration: none;
+ }
+
+ /*==================================================
+　5-3-1 中心から外に線が伸びる（下部）
+===================================*/
+
+#under_line{
+    /*線の基点とするためrelativeを指定*/
+	position: relative;
+}
+
+#under_line:hover{
+	color:#0481A2;
+}
+
+#under_line::after {
+    content: '';
+    /*絶対配置で線の位置を決める*/
+    position: absolute;
+    bottom: 0;
+    left: 10%;
+    /*線の形状*/
+    width: 80%;
+    height: 2px;
+    background:#0481A2;
+    /*アニメーションの指定*/
+    transition: all .3s;
+    transform: scale(0, 1);/*X方向0、Y方向1*/
+    transform-origin: center top;/*上部中央基点*/
+}
+
+/*現在地とhoverの設定*/
+#under_line:hover::after {
+    transform: scale(1, 1);/*X方向にスケール拡大*/
+}
 
 
 
