--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -89,24 +89,6 @@
 
 // Game画面のレイアウト
 .game{
-  &--view{
-    position: relative;
-    background: black;
-    width: 100%;
-    height: 500px;
-    h1, h2{
-      color: white;
-    }
-    &__photo{
-      width: 1200px;
-      height: 500px;
-      background-image: image-url('7.jpg');
-      background-size: cover;
-      position: absolute;
-      top: 0;
-      right: 0;
-    }
-  }
   &--conference{
     position: relative;
     margin: 30px 0 30px 30px;
@@ -151,7 +133,8 @@
     border-collapse: collapse;
     text-align: center;
     th, td {
-      padding: 40px;
+      height: 80px;
+      padding: 10px 40px;
       border: 1px solid #333;
     }
     th {
