--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,24 +3,29 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .posts{
-  width: 1100px;
+  width: 100%;
   height: 550px;
-  border: 45px solid #000;
-  border-image-slice: 43;
-  border-image-source: image_url('frame.jpeg');
-  border-image-width: 2;
-  border-image-outset: 43px;
-  background-image: image_url('CorkBoard02.jpeg');
   position: relative;
-  overflow: scroll;
+  &--title{
+    position: absolute;
+    top: -30px;
+    right: 40px;
+    z-index: 100;
+  }
   &--contents{
-    width: 80%;
-    height: 650px;
-    margin: 60px 0 0 70px;
+    height: 550px;
+    border: 45px solid #000;
+    border-image-slice: 43;
+    border-image-source: image_url('frame.jpeg');
+    border-image-width: 2;
+    border-image-outset: 43px;
+    background-image: image_url('CorkBoard02.jpeg');
+    margin-left: 70px;
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
     position: relative;
+    overflow: scroll;
     &__view{
       margin-top: 10px;
       width: 30%;
