--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -65,6 +65,7 @@
   background-image: image_url('renga.jpg');
   background-size: cover;
   &--posts{
+    width: 60%;
     margin: 60px 0 0 50px;
   }
 }
