--- a/app/views/facilities/show.html.erb
+++ b/app/views/facilities/show.html.erb
@@ -1,104 +1,168 @@
-<div class="row mt-5 offset-md-2">
-    <div class="col-md-3">
-      <div class="row">
-        <div class="col-mb-6">
-          <%= attachment_image_tag(@facility, :facility_image, :fill, 50, 50, fallback: "no_image.jpg") %>
-        </div>
-        <div class="col-mb-6">
-          <%= @facility.name %>
-        </div>
+<div class="facility-show">
+  <div class="facility-show--info">
+    <h2>施設情報</h2>
+    <div class="facility-show--details">
+      <div class="facility-show--details__title">
+        <p>施設名</p>
       </div>
-
-      <div>
-        <h2>施設情報</h2><br>
-        <%= @facility.opening %> ~ <%= @facility.closing %>
+      <div class="facility-show--details__data">
+        <p><%= @facility.name %></p>
       </div>
-
-      <div>
-        郵便番号<%= @facility.postcode %>
-      </div>
-
-      <div>
-        住所<%= @facility.address %>
-      </div>
-
-      <div>
-        最寄り駅<%= @facility.station %>
-      </div>
-
-      <div>
-        駐車場<%= @facility.station %>
-      </div>
-
-      <div>
-        電話番号<%= @facility.phone_number %>
-      </div>
-
-      <div>
-        メールアドレス<%= @facility.email %>
-      </div>
-
-      <% if @facility.comment %>
-        <div>
-          コメント<%= @facility.comment %>
-        </div>
-      <% end %>
-
-      <% if current_user %>
-      <div id = "favorites_btn_<%= @facility.id %>">
-        <%= render 'facility_favorites/like', facility: @facility %>
-      </div>
-      <% end %>
     </div>
 
-  <div class="col-md-8">
-    <div class="show__maps" id="show_map" style="height: 650px; width: 100%;"></div>
+    <div class="facility-show--details">
+      <div class="facility-show--details__title">
+        <p>営業時間</p>
+      </div>
+      <div class="facility-show--details__data">
+        <p><%= @facility.opening %> ~ <%= @facility.closing %></p>
+      </div>
+    </div>
+
+    <div class="facility-show--details">
+      <div class="facility-show--details__title">
+        <p>郵便番号</p>
+      </div>
+      <div class="facility-show--details__data">
+        <p>〒<%= @facility.postcode %></p>
+      </div>
+    </div>
+
+    <div class="facility-show--details">
+      <div class="facility-show--details__title">
+        <p>住所</p>
+      </div>
+      <div class="facility-show--details__data">
+        <p><%= @facility.address %></p>
+      </div>
+    </div>
+
+    <div class="facility-show--details">
+      <div class="facility-show--details__title">
+        <p>最寄り駅</p>
+      </div>
+      <div class="facility-show--details__data">
+        <p><%= @facility.station %></p>
+      </div>
+    </div>
+
+    <div class="facility-show--details">
+      <div class="facility-show--details__title">
+        <p>駐車場</p>
+      </div>
+      <div class="facility-show--details__data">
+        <p><%= @facility.parking %></p>
+      </div>
+    </div>
+
+    <div class="facility-show--details">
+      <div class="facility-show--details__title">
+        <p>電話番号</p>
+      </div>
+      <div class="facility-show--details__data">
+        <p><%= @facility.phone_number %></p>
+      </div>
+    </div>
+
+    <div class="facility-show--details">
+      <div class="facility-show--details__title">
+        <p>メールアドレス</p>
+      </div>
+      <div class="facility-show--details__data">
+        <p><%= @facility.email %></p>
+      </div>
+    </div>
+
+    <% if current_user %>
+      <div id = "favorites_btn_<%= @facility.id %>">
+        いいね<%= render 'facility_favorites/like', facility: @facility %>
+      </div>
+    <% end %>
+
+    <div class="facility-show--photo">
+      <%= attachment_image_tag(@facility, :facility_image, fallback: "no_image.jpg") %>
+    </div>
   </div>
 
+  <div class="facility-show--map">
+    <div class="show__maps" id="show_map"></div>
+  </div>
+
+   <% if current_user %>
+    <div class="facility-show--new-reserve">
+      <h2>Reserve</h2>
+      <%= form_with(model: [@facility, @reserve_facility], local: true) do |f| %>
+        <%= f.label :日時 %>
+        <%= f.datetime_field :start %>
+        <%= f.datetime_field :finish %>
+        <%= f.label :人数 %>
+        <%= f.text_field :number %>
+        <%= f.submit "予約する" %>
+      <% end %>
+    </div>
+  <% end %>
+
+  <div class="facility-show--calendar">
+    <div id="calendar"></div>
+  </div>
+
+
+  <div class="facility-show--rate-comment">
+    <% if @facility_comments %>
+      <div class="facility-show--rate">
+        <h2>Facility Evaluation</h2>
+        <%= bar_chart @data, colors: ["orange"], min: 0, max: 100 %>
+      </div>
+    <% end %>
+
+    <div class="facility-show--comments">
+      <h2>Comments</h2>
+      <% if current_user %>
+        <div class="facility-show--new-comment">
+          <%= form_with(model: [@facility, @comment], local: true) do |f| %>
+            <div id="evaluate_stars">
+              <label>評価</label>
+            </div>
+            <%= f.label :comment %><br>
+            <%= f.text_area :comment %>
+            <%= f.submit "コメントする" %>
+          <% end %>
+        </div>
+      <% end %>
+
+      <div class="facility-show--comments">
+        <%= render "facility_comments/index", facility_comments: @facility_comments %>
+      </div>
+    </div>
+  </div>
 </div>
 
-<div id="calendar" style="width: 80%; margin: 0 auto;"></div>
+
+  <script>
+    $('#evaluate_stars').raty({
+      starOn: "<%= asset_path('star-on.png') %>",
+      starOff: "<%= asset_path('star-off.png') %>",
+      starHalf: "<%= asset_path('star-half.png') %>",
+      scoreName: 'facility_comment[rate]' //登録するモデル名とカラム名を記述
+    });
+  </script>
 
 
-<% if current_user %>
-
-  <div class="new-reserve" >
-    <h2>Reserve</h2>
-    <%= form_with(model: [@facility, @reserve_facility], local: true) do |f| %>
-      <%= f.label :日時 %>
-      <%= f.datetime_field :start %>
-      <%= f.datetime_field :finish %>
-      <%= f.label :人数 %>
-      <%= f.text_field :number %>
-      <%= f.submit "予約する" %>
-    <% end %>
-  </div>
-
-  <div class="new-comment">
-    <h2>Comments</h2>
-    <%= form_with(model: [@facility, @comment], local: true) do |f| %>
-      <div id="evaluate_stars">
-        <label>評価</label>
+<div id="calendarModal" class="modal fade">
+  <div class="modal-dialog modal-dialog-center">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">
+          <span aria-hidden="true">×</span>
+          <span class="sr-only">close</span>
+        </button>
+        <span id="modalTitle" class="modal-title"></span>
       </div>
-      <%= f.label :comment %>
-      <%= f.text_area :comment %>
-      <%= f.submit "コメントする" %>
-    <% end %>
+      <div id="modalBody" class="modal-body"></div>
+      <div id="modalFooter" class="modal-footer"></div>
+    </div>
   </div>
-
-  <div class="comments">
-    <%= render "facility_comments/index", facility_comments: @facility_comments %>
-  </div>
-<% end %>
-
-<script>
-  $('#evaluate_stars').raty({
-    starOn: "<%= asset_path('star-on.png') %>",
-    starOff: "<%= asset_path('star-off.png') %>",
-    starHalf: "<%= asset_path('star-half.png') %>",
-    scoreName: 'facility_comment[rate]' //登録するモデル名とカラム名を記述
-  });
-</script>
+</div>
 
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKzm8Q1CsziI929WJM-dQQlwV1L3MpydY&callback=initMap"></script>
