--- a/app/views/post_favorites/index.html.erb
+++ b/app/views/post_favorites/index.html.erb
@@ -3,6 +3,6 @@
     <%= render "users/info", user: @user %>
   </div>
   <div class="user-show--posts">
-    <%= render "posts/posts", posts: @posts %>
+    <%= render "posts/posts", posts: @posts, title: "/assets/favorite_post.png" %>
   </div>
 </div>
