--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,9 @@
   <div class="user-show--info">
     <%= render "users/info", user: @user %>
   </div>
+
   <div class="user-show--posts">
-    <%= render "posts/posts", posts: @posts %>
+    <%= render "posts/posts", posts: @posts, title: "/assets/mypost.png" %>
   </div>
 </div>
 
