--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -62,6 +62,8 @@
   </div>
 </div>
 
+
+<!--DMのモーダルウィンドウ部分-->
 <% if user != current_user %>
   <% if current_user.following?(user) %>
     <div class="chats">
