--- a/app/views/facilities/index.html.erb
+++ b/app/views/facilities/index.html.erb
@@ -27,8 +27,8 @@
     <div class="new-facility--form-group">
       <button onclick="AddressSearch(this.value)" type="button" class="new-facility--search-map" id="address" value="東京">東京</button>
       <button onclick="AddressSearch(this.value)" type="button" class="new-facility--search-map" id="address" value="大阪">大阪</button>
-      <button onclick="AddressSearch(this.value)" type="button" class="new-facility--search-map" id="address" value="北海道">北海道</button>
-      <button onclick="AddressSearch(this.value)" type="button" class="new-facility--search-map" id="address" value="岐阜">岐阜</button>
+      <button onclick="AddressSearch(this.value)" type="button" class="new-facility--search-map" id="address" value="札幌">札幌</button>
+      <button onclick="AddressSearch(this.value)" type="button" class="new-facility--search-map" id="address" value="岐阜">名古屋</button>
       <button onclick="AddressSearch(this.value)" type="button" class="new-facility--search-map" id="address" value="佐賀">佐賀</button>
     </div>
   </div>
