--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <div class="user-show">
   <div class="user-show--info">
     <%= render "users/info", user: @user %>
+    <div class="user-show--trash-box">
+      <img src="/assets/trash-box.png">
+    </div>
   </div>
 
   <div class="user-show--posts">
