--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -21,34 +21,20 @@
     border-image-outset: 43px;
     background-image: image_url('CorkBoard02.jpeg');
     margin-left: 70px;
-    display: flex;
-    flex-wrap: wrap;
     align-items: baseline;
-    position: relative;
     overflow: scroll;
     &__view{
+      display: inline-block;
       margin-top: 10px;
       width: 30%;
       background-image: image-url('red.png');
       background-size: cover;
-      &:nth-child(even){
-        margin: 60px 20px 0 20px;
-        width: 30%;
-        background-image: image-url('blue.png');
-        background-size: cover;
-      }
+
     }
     &__detail{
       padding-top: 30px;
       padding-left: 30px;
-      img{
-        margin-right: 10px;
-        width: 50px;
-        height: 50px;
-        border: 1px solid black;
-        border-radius: 50px;
-        box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
-      }
+
     }
     &__content{
       padding-top: 30px;
@@ -64,7 +50,7 @@
   }
 }
 
-// 詳細ページレイアウト
+// 投稿詳細ページレイアウト
 .post-show{
   width: 100%;
   height: 100vh;
@@ -79,10 +65,10 @@
   &--contents{
     width: 500px;
     margin-right: 50px;
-    background-image: image_url('blue.png');
-    background-size: cover;
   }
   &--post{
+    background-image: image_url('blue.png');
+    background-size: cover;
     padding: 60px 50px;
   }
   &--post-user{
